# tfmicro

./: .drone.yml  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  DEVELOP.md  README.md  README.tpl  build.rs  build.sh  publish_crate.sh  tensorflow_version.sh
.github/workflows/: rust.yml
benches/: bench.rs
csrc/: inject_cmath_std.hpp  tflite_wrapper.hpp
examples/: minimal.rs
examples/models/: convert_cc_to_tflite.py  no_1000ms_sample.data  no_micro_f9643d42_nohash_4.data  no_person_image_data_grayscale.data  ring_micro_f9643d42_nohash_4.data  slope_micro_f2e59fea_nohash_1.data  yes_micro_f2e59fea_nohash_1.data
examples/riscv-e310/: Cargo.toml  LICENSE-MIT  README.md  memory.x
examples/riscv-e310/.cargo/: config
examples/riscv-e310/src/: main.rs
examples/stm32f0/: Cargo.toml  README.md  memory.x
examples/stm32f0/src/: main.rs
examples/stm32f0/tooling/: size.awk  size.sh
src/: error_reporter.rs  frontend.rs  interop.rs  lib.rs  micro_error_reporter.rs  micro_interpreter.rs  micro_op_resolver.rs  model.rs  operators.rs  ops_builtin.rs
src/interpreter/: context.rs  mod.rs
src/model/: mod.rs
src/tensor/: info.rs  mod.rs
tests/: magic_wand.rs  micro_speech.rs  micro_speech_from_audio.rs  person_detection.rs
