[package]
name = "tfmicro"
version = "0.1.0"
authors = ["Richard Meadows <richard@richard.fish>", "Kevin Hill <kevin@kevinhill.nl>"]
description = "Rust bindings of TensorFlow Lite for Microcontrollers"
license = "Apache-2.0"
repository = "https://github.com/Recognition2/tfmicro"
readme = "README.md"
keywords = ["tensorflow", "microcontroller", "no_std", "embedded"]
categories = ["no-std", "embedded", "api-bindings", "computer-vision"]
edition = "2018"

# include only the necessary parts of tensorflow
include = [
  "**/*.rs",
  "/*.md",
  "LICENSE-*",
  "examples/models/**",
  "csrc/**",
  "src/**",
  "!.gdb_history",              # From gitignore
  "!vgcore.*",
  "!**/*_test.cc",              # No tests
  # Downloads
  "submodules/tensorflow/tensorflow/lite/micro/tools/make/downloads/flatbuffers/include/**",
  "submodules/tensorflow/tensorflow/lite/micro/tools/make/downloads/gemmlowp/**/*.h",
  "submodules/tensorflow/tensorflow/lite/micro/tools/make/downloads/ruy",
  "submodules/tensorflow/tensorflow/lite/micro/tools/make/downloads/cmsis",
  "submodules/tensorflow/tensorflow/lite/micro/tools/make/downloads/kissfft",
  # Micro
  "submodules/tensorflow/tensorflow/lite/micro/*.[ch]*",
  "submodules/tensorflow/tensorflow/lite/micro/kernels/**/*.[ch]*",
  "submodules/tensorflow/tensorflow/lite/micro/memory_planner/*.[ch]*",
  "submodules/tensorflow/tensorflow/lite/micro/testing/*.h",
  # Lite
  "submodules/tensorflow/tensorflow/lite/*.[ch]*",
  "submodules/tensorflow/tensorflow/lite/c/**/*.[ch]*",
  "submodules/tensorflow/tensorflow/lite/kernels/**/*.[ch]*",
  "submodules/tensorflow/tensorflow/lite/schema/schema_generated.h",
  "submodules/tensorflow/tensorflow/lite/micro/memory_planner/*.cc",
  "submodules/tensorflow/tensorflow/lite/experimental/microfrontend/lib",
  "submodules/tensorflow/tensorflow/lite/core/api",
  # Core
  "submodules/tensorflow/tensorflow/core/public/*.h",
]

[lib]
crate-type = ["rlib"]
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = false
no-default-features = true
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
cpp = "0.5.5"
cty = "0.2.1"
log = { version = "0.4.11", default-features = false }
managed = { version = "0.8.0", default-features = false }
ordered-float = { version = "~2.0.0", default-features = false }

[build-dependencies]
cc = { version = "~1.0.61", features = ["parallel"] }
bindgen = "0.59.2"
cpp_build = "0.5.5"
glob = "0.3.0"
fs_extra = "~1.2.0"
error-chain = "0.12.4"

[dev-dependencies]
env_logger = "0.8.1"
itertools = "0.9.0"

[features]
build = []
std = ["managed/std"]
alloc = ["managed/alloc"]
no-c-warnings = []
cmsis-nn = []

[profile.release]
debug = true # symbols are nice
